tests/fixtures/parse-error/src/components/Broken.tsx
import { useEffect } from "react";

export function Broken() {
  useEffect(() => {
    // missing closing braces
